# CS4248

./: .gitignore  .gitmodules  3d_model_evaluation_for_custom_model.py  AE.py  CLIP_Emoji_clean.ipynb  CLIP_updated_evaluation.ipynb  Evaluation_Base.ipynb  Evaluation_for_Custom_Model.ipynb  README.md  bert.py  bias_experiment.py  check_dataset.py  combined_data.py  custom_eval_local.py  decoder.py  download_data.py  emotion_entailment.py  emotional_embedding.py  encode_data_persistent.py  encode_dataset.py  encoder.py  encoder_eval.py  encoder_test.ipynb  evaluation_for_custom_model (1).py  evaluation_for_custom_model.py  gpt.py  gpt_topics.py  llama_encoder.py  llm.py  openai_generate.py  pyproject.toml  requirements_cpu.txt  requirements_gpu.txt  save_model.py  test.py  topic_embeddings.py  train_decoder.py  train_llm.py
datasets/: ELCo_adapted_edited.csv  ELCo_bert_adapted_edited.csv  ELCo_with_sentences.csv  bert_dataset.py  dense_emoji_subset.csv  emoji_frequency.py  emoji_gender.py  emoji_gender_separated.py  emoji_gendered.csv  emoji_nongendered.csv  emoji_skintone.py  emotion_density.py  hallucinate.py  non_dense_emoji_subset.csv
datasets/elco_adapted/: ELCo_adapted.csv  ELCo_with_sentences.csv  hallucinate.py
docker/: Dockerfile  requirements_gpu.txt
